--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-DB_URL=mongodb+srv://romanphilimon95:695v89eqbhh4hy9FTK2S@to-do-list.ebsb2.mongodb.net/To-Do-list?retryWrites=true&w=majority
+DB_URL=mongodb+srv://romanphilimon95:<password>@to-do-list.ebsb2.mongodb.net/To-Do-list?retryWrites=true&w=majority
